jellyfin-ffmpeg (7.1.1-6) unstable; urgency=medium

  * lavc/videotoolbox: don't return external error for invalid vt frame
  * Add NV15 format input support for certain OpenCL filters
  * Add array of textures support for d3d11va hwaccel

 -- nyanmisaka <nst799610810@gmail.com>  Sun, 8 Jun 2025 18:14:53 +0800

jellyfin-ffmpeg (7.1.1-5) unstable; urgency=medium

  * rkmppdec: add RKMPP MJPEG decoder
  * rkmppenc: add chroma_fmt option for MJPEG encoder
  * rkrga: refine colorspace conversion handling
  * rkmppenc: fix rgb2yuv CSC when the input is RGB formats
  * Drop Ubuntu 20.04 Focal as it reached EOL
  * Pass E-AC-3 addbsi to movenc for Dolby Atmos remuxing

 -- nyanmisaka <nst799610810@gmail.com>  Mon, 2 Jun 2025 14:31:36 +0800

jellyfin-ffmpeg (7.1.1-4) unstable; urgency=medium

  * Add OpenCL based YADIF & BWDIF deinterlacing filters
  * Tune the default async_depth for AMF encoders
  * Port 3DLUT based tonemapping to CUDA
  * Apply DOVI L1 metadata when available
  * Allow QSV Enc to bail out from unsupported low-power mode

 -- nyanmisaka <nst799610810@gmail.com>  Fri, 16 May 2025 20:33:46 +0800

jellyfin-ffmpeg (7.1.1-3) unstable; urgency=medium

  * avfilter/tonemap_opencl: reduce compute and memory load of 3dlut
  * avfilter/tonemap_opencl: always use eotf for lms2rgb
  * Add FP16 tradeoff for DOVI reshaping
  * Fix VUI full range flag in RKMPP encoded videos
  * Increase default frame pool size for D3D11VA AV1/VP9
  * Handle NOPTS and no extradata in RKMPP decoders
  * Defer DX11 to OCL mapping for low startup latency
  * avfilter/tonemapx: use cpu friendly conditional assignments
  * Remove all armhf build configs
  * ffprobe: always use ifile->nb_streams for first vframe option
  * Add intel-opencl-icd{,-legacy} to control/Suggests

 -- nyanmisaka <nst799610810@gmail.com>  Tue, 6 May 2025 21:12:22 +0800

jellyfin-ffmpeg (7.1.1-2) unstable; urgency=medium

  * Fix VPP tonemap without having HDR10 metadata
  * Sync fixes from ffmpeg-rockchip