@@ -3,6 +3,7 @@ jellyfin-ffmpeg (7.1.1-6) unstable; urgency=medium
   * lavc/videotoolbox: don't return external error for invalid vt frame
   * Add NV15 format input support for certain OpenCL filters
   * Add array of textures support for d3d11va hwaccel
+  * Add Debian 13 Trixie for testing
 
  -- nyanmisaka <nst799610810@gmail.com>  Sun, 8 Jun 2025 18:14:53 +0800
 
